--- a/projects/covid-in-nyc.html
+++ b/projects/covid-in-nyc.html
@@ -24,7 +24,7 @@
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h2>COVID-19 in NYC: Charted</h2>
-    <a href="#img1"><img src="/imgs/covid-home.png" class="thumbnail" alt="Screenshot of BULPA homepage"></a>
+    <a href="#img1"><img src="/imgs/covid-home.png" class="thumbnail" alt="Screenshot of covidinnyc.com homepage"></a>
     <a href="#_" class="lightbox" id="img1"><img src="/imgs/covid-home.png"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <p style="text-align: center;"><a href="https://www.covidinnyc.com/" target="_blank">Project Link</a> | <a href="https://github.com/ricky-shin/covid-in-nyc" target="_blank">GitHub Repository</a></p>
@@ -37,7 +37,7 @@
         <li>Interactive Charts <ul><li>What's awesome about front-end development is allowing visitors to interact with data. This manipulation of data allows users to better understand the data they're seeing, and I saw it as a crucial feature for the website. Keeping that in mind, I began searching for JS charting libraries, and went with <a href="https://github.com/chartjs/Chart.js" target="_blank">chart.js </a></li></ul></li>
         <li>Adding/Subtracting Dates<ul><li>A necessary requirement in the making of the "<a href="https://www.covidinnyc.com/#pueyo" target="_blank">Pueyo Estimate</a>" model was allowing users to select different variables to see different projections. One of these variables was dates. I soon became very aware of the headaches associated with adding/subtracting dates and time. <ul><li>To solve this issue, I implemented <a href="https://momentjs.com/" target="_blank">moment.js</a> </li></ul></li></ul></li>
     </ol>
-    <a href="#img2"><img src="/imgs/covid-chart.gif" class="thumbnail" alt="Screenshot of BULPA homepage"></a>
+    <a href="#img2"><img src="/imgs/covid-chart.gif" class="thumbnail" alt="Animated GIF of a dynamic chart"></a>
     <a href="#_" class="lightbox" id="img2"><img src="/imgs/covid-chart.gif"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <footer>
