--- a/projects/covid-in-nyc.html
+++ b/projects/covid-in-nyc.html
@@ -19,13 +19,13 @@
 <body>
     <h1>Ricky Shin</h1>
     <nav style="text-align: center;">
-        <a href="/index.html">Home</a>
+        <a href="/index">Home</a>
         <a href="/shin_resume.pdf">Resume</a>
         <a href="mailto:hi@rickyshin.com">Contact</a>
     </nav>
     <h2>COVID-19 in NYC: Charted</h2>
-    <a href="#img1"><img src="/imgs/covid-home.png" class="thumbnail" alt="Screenshot of covidinnyc.com homepage"></a>
-    <a href="#_" class="lightbox" id="img1"><img src="/imgs/covid-home.png"/></a>
+    <a href="#img1"><img src="/imgs/covid-home.png" class="thumbnail" alt="Screenshot of covidinnyc.com homepage" style="border: none;"></a>
+    <a href="#_" class="lightbox" id="img1"><img src="/imgs/covid-home.png" style="border: none;"/></a>
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <p style="text-align: center;"><a href="https://www.covidinnyc.com/" target="_blank">Project Link</a> | <a href="https://github.com/ricky-shin/covid-in-nyc" target="_blank">GitHub Repository</a></p>
     <p>A website dedicated to charting the COVID-19 pandemic, more specifically in New York City. The website fetches and charts data without a backend. Built using JavaScript.</p>
@@ -42,7 +42,7 @@
     <figcaption style="font-style: italic; font-size: x-small; text-align: center;">Click to enlarge</figcaption>
     <footer>
         <div style="font-style: italic; font-size: x-small;">
-            Updated: May 26th, 2020
+            Updated: August 24th, 2020
         </div>
     </footer>
 </body>
